--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,8 +30,8 @@ header {
 
 header h1 {
     display: inline;
-    font-size:1.3em;
-    font-weight:bold;
+    font-size:0.8em;
+    font-style:italic;
     color:#FFFFFF;
 }
 
@@ -65,7 +65,7 @@ nav {
 }
 
 nav a {
-    margin-left: 20px;
+    margin-left: 30px;
 }
 
 #account {
