--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@ header {
 }
 
 header h1 {
-    background-image: url(../images/visually.png);
+    background-image: url('../images/visually.png');
     display: inline;
     font-size:0.8em;
     font-style:italic;
@@ -313,7 +313,7 @@ topcomment {
     top: 5%;
     width: 90%;
     height: 10em;
-    color: #FFFFFF;
+    color: #ccc;
     margin: 0;
     padding: 1em;
     position: absolute;
