--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,7 @@ header {
     display:block;
     position:relative;
     padding: 15px 0px 15px 15px;
-    /*background-color:rgba(1,64,93,.9);*/
+    background-color:rgba(1,64,93,.9);
     background-image: url('../images/visually.png');
     border-bottom: 1px #ccc solid;
 }
