--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 body {
     font-family: 'Lato', sans-serif;
     text-rendering: optimizeLegibility;
+    background-image: url('../images/visually.png') no-repeat top left;
 }
 
 a {
