--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ body {
 
 a {
     text-decoration:none;
-    color:#666;
+    color:#fff;
 }
 
 h2 {
@@ -32,11 +32,11 @@ header h1 {
     display: inline;
     font-size:1.3em;
     font-weight:bold;
-    color:#333;
+    color:#fff;
 }
 
 header h1 a {
-    color:#333;
+    color:#fff;
 }
 
 header h1 small {
